feat(1442): update test cases