@@ -13,6 +13,8 @@ import com.soprasteria.g4it.backend.apiuser.business.AuthService;
 import com.soprasteria.g4it.backend.apiuser.business.RoleService;
 import com.soprasteria.g4it.backend.apiuser.business.UserService;
 import com.soprasteria.g4it.backend.apiuser.business.WorkspaceService;
+import com.soprasteria.g4it.backend.apiuser.mapper.UserRestMapper;
+import com.soprasteria.g4it.backend.apiuser.mapper.UserRestMapperImpl;
 import com.soprasteria.g4it.backend.apiuser.model.OrganizationBO;
 import com.soprasteria.g4it.backend.apiuser.model.UserBO;
 import com.soprasteria.g4it.backend.apiuser.model.UserInfoBO;
@@ -31,6 +33,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
@@ -49,7 +52,7 @@ class AdministratorWorkspaceServiceTest {
     @InjectMocks
     private AdministratorWorkspaceService administratorWorkspaceService;
 
-    private long organizationId;
+    private long workspaceId;
 
     @Mock
     UserRepository userRepository;
@@ -75,7 +78,8 @@ class AdministratorWorkspaceServiceTest {
 
     @Mock
     UserOrganizationRepository userOrganizationRepository;
-
+    @Spy
+    UserRestMapper userRestMapper = new UserRestMapperImpl();
     @Mock
     UserService userService;
 
@@ -87,11 +91,11 @@ class AdministratorWorkspaceServiceTest {
         UserRoleRest userRoleRest = TestUtils.createUserRoleRest(userId, List.of(ROLE));
 
 
-        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(organizationId,
+        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(workspaceId,
                 Collections.singletonList(userRoleRest));
 
-        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userId)).thenReturn(Optional.empty());
-        when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(TestUtils.createOrganization()));
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(workspaceId, userId)).thenReturn(Optional.empty());
+        when(workspaceRepository.findById(workspaceId)).thenReturn(Optional.of(TestUtils.createWorkspace()));
         when(userRepository.findById(userId)).thenReturn(Optional.of(User.builder().id(userId).build()));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
 
@@ -107,10 +111,10 @@ class AdministratorWorkspaceServiceTest {
 
         long userId = 1L;
         UserRoleRest userRoleRest = TestUtils.createUserRoleRest(userId, List.of());
-        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(organizationId, Collections.singletonList(userRoleRest));
+        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(workspaceId, Collections.singletonList(userRoleRest));
 
-        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userRoleRest.getUserId())).thenReturn(Optional.empty());
-        when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(TestUtils.createOrganization()));
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(workspaceId, userRoleRest.getUserId())).thenReturn(Optional.empty());
+        when(workspaceRepository.findById(workspaceId)).thenReturn(Optional.of(TestUtils.createWorkspace()));
         when(userRepository.findById(userRoleRest.getUserId())).thenReturn(Optional.of(User.builder().id(userId).build()));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
 
@@ -126,12 +130,12 @@ class AdministratorWorkspaceServiceTest {
         long userId = 1L;
 
         UserRoleRest userRoleRest = TestUtils.createUserRoleRest(userId, List.of(ROLE));
-        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(organizationId,
+        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(workspaceId,
                 Collections.singletonList(userRoleRest));
-        UserWorkspace userWorkspace = TestUtils.createUserOrganization(organizationId, userId);
+        UserWorkspace userWorkspace = TestUtils.createUserWorkspace(workspaceId, userId);
 
-        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userRoleRest.getUserId())).thenReturn(Optional.ofNullable(userWorkspace));
-        when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(TestUtils.createOrganization()));
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(workspaceId, userRoleRest.getUserId())).thenReturn(Optional.ofNullable(userWorkspace));
+        when(workspaceRepository.findById(workspaceId)).thenReturn(Optional.of(TestUtils.createWorkspace()));
         when(userRepository.findById(userId)).thenReturn(Optional.of(User.builder().id(userId).build()));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
 
@@ -142,20 +146,20 @@ class AdministratorWorkspaceServiceTest {
     }
 
     @Test
-    void getWorkspacesWithSubscriberAndOrganizationNull() {
-        Long subscriberId = null;
-        Long orgId = null;
+    void getWorkspacesWithOrganizationAndWorkspaceNull() {
+        Long organizationId = null;
+        Long workId = null;
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
 
         doNothing().when(administratorRoleService).hasAdminRightsOnAnyOrganizationOrAnyWorkspace(userBO);
 
-        List<OrganizationBO> result = administratorWorkspaceService.getWorkspaces(subscriberId, orgId, userBO);
+        List<OrganizationBO> result = administratorWorkspaceService.getWorkspaces(organizationId, workId, userBO);
 
         verify(administratorRoleService).hasAdminRightsOnAnyOrganizationOrAnyWorkspace(userBO);
         assertEquals(1, result.size());
 
         OrganizationBO organizationBO = result.getFirst();
-        assertEquals(1, organizationBO.getOrganizations().size());
+        assertEquals(1, organizationBO.getWorkspaces().size());
     }
 
     @Test
@@ -175,43 +179,43 @@ class AdministratorWorkspaceServiceTest {
     @Test
     void updateWorkspace() {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        Long subscriberId = 1L;
-        Long orgId = 33L;
-        String organizationName = "ORGANIZATION";
+        Long organizationId = 1L;
+        Long workId = 33L;
+        String workspaceName = "WORKSPACE";
         String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpsertRest workspaceUpsertRest =
-                TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
-        WorkspaceBO updatedOrganization = WorkspaceBO.builder().id(orgId).name("UpdatedName").build();
+                TestUtils.createOrganizationUpsert(organizationId, workspaceName, updatedStatus, dataRetentionDay);
+        WorkspaceBO updatedOrganization = WorkspaceBO.builder().id(workId).name("UpdatedName").build();
 
-        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(userBO, subscriberId, orgId);
-        when(workspaceService.updateWorkspace(orgId, workspaceUpsertRest, userBO.getId())).thenReturn(updatedOrganization);
+        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(userBO, organizationId, workId);
+        when(workspaceService.updateWorkspace(workId, workspaceUpsertRest, userBO.getId())).thenReturn(updatedOrganization);
 
-        WorkspaceBO result = administratorWorkspaceService.updateWorkspace(orgId, workspaceUpsertRest, userBO);
+        WorkspaceBO result = administratorWorkspaceService.updateWorkspace(workId, workspaceUpsertRest, userBO);
 
-        verify(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(userBO, subscriberId, orgId);
-        verify(workspaceService).updateWorkspace(orgId, workspaceUpsertRest, userBO.getId());
+        verify(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(userBO, organizationId, workId);
+        verify(workspaceService).updateWorkspace(workId, workspaceUpsertRest, userBO.getId());
         verify(userService).clearUserAllCache();
 
-        assertEquals(orgId, result.getId());
+        assertEquals(workId, result.getId());
         assertEquals("UpdatedName", result.getName());
     }
 
     @Test
     void updateWorkspaceNoAdminRights() {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        Long subscriberId = 1L;
-        Long orgId = 33L;
-        String organizationName = "ORGANIZATION";
+        Long organizationId = 1L;
+        Long workId = 33L;
+        String workspaceName = "WORKSPACE";
         String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpsertRest workspaceUpsertRest =
-                TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
+                TestUtils.createOrganizationUpsert(organizationId, workspaceName, updatedStatus, dataRetentionDay);
 
-        doThrow(new AuthorizationException(HttpServletResponse.SC_FORBIDDEN, "User with id '1' do not have admin role on subscriber '1' or organization '1'")).when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(userBO, subscriberId, orgId);
+        doThrow(new AuthorizationException(HttpServletResponse.SC_FORBIDDEN, "User with id '1' do not have admin role on organization '1' or organization '1'")).when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(userBO, organizationId, workId);
 
         assertThrows(AuthorizationException.class, () -> {
-            administratorWorkspaceService.updateWorkspace(orgId, workspaceUpsertRest, userBO);
+            administratorWorkspaceService.updateWorkspace(workId, workspaceUpsertRest, userBO);
         });
 
         verify(workspaceService, never()).updateWorkspace(any(), any(), any());
@@ -221,21 +225,21 @@ class AdministratorWorkspaceServiceTest {
     @Test
     void createWorkspaceWithAdminRole() {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        Long subscriberId = 1L;
-        String organizationName = "ORGANIZATION";
+        Long organizationId = 1L;
+        String workspaceName = "WORKSPACE";
         String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpsertRest workspaceUpsertRest =
-                TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
+                TestUtils.createOrganizationUpsert(organizationId, workspaceName, updatedStatus, dataRetentionDay);
         WorkspaceBO expectedOrg = WorkspaceBO.builder().id(33L).build();
 
-        when(workspaceService.createWorkspace(workspaceUpsertRest, userBO, subscriberId)).thenReturn(expectedOrg);
-        when(roleService.isUserDomainAuthorized(userBO, subscriberId)).thenReturn(true);
-        when(roleService.hasAdminRightsOnOrganization(userBO, subscriberId)).thenReturn(true);
+        when(workspaceService.createWorkspace(workspaceUpsertRest, userBO, organizationId)).thenReturn(expectedOrg);
+        when(roleService.isUserDomainAuthorized(userBO, organizationId)).thenReturn(true);
+        when(roleService.hasAdminRightsOnOrganization(userBO, organizationId)).thenReturn(true);
         WorkspaceBO result = administratorWorkspaceService.createWorkspace(workspaceUpsertRest, userBO, true);
 
-        verify(administratorRoleService).hasOrganizationAdminOrDomainAccess(userBO, subscriberId, true, true);
-        verify(workspaceService).createWorkspace(workspaceUpsertRest, userBO, subscriberId);
+        verify(administratorRoleService).hasOrganizationAdminOrDomainAccess(userBO, organizationId, true, true);
+        verify(workspaceService).createWorkspace(workspaceUpsertRest, userBO, organizationId);
         verify(userService).clearUserCache(userBO);
 
         assertEquals(expectedOrg, result);
@@ -244,29 +248,29 @@ class AdministratorWorkspaceServiceTest {
     @Test
     void createWorkspaceWithoutAdminRole() {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        Long subscriberId = 1L;
-        String organizationName = "ORGANIZATION";
+        Long organizationId = 1L;
+        String workspaceName = "WORKSPACE";
         String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpsertRest workspaceUpsertRest =
-                TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
-        WorkspaceBO expectedOrg = WorkspaceBO.builder().id(1L).name(organizationName).build();
+                TestUtils.createOrganizationUpsert(organizationId, workspaceName, updatedStatus, dataRetentionDay);
+        WorkspaceBO expectedOrg = WorkspaceBO.builder().id(1L).name(workspaceName).build();
 
-        Workspace org = TestUtils.createOrganization();
+        Workspace work = TestUtils.createWorkspace();
         User userEntity = User.builder().id(1L).build();
 
-        when(workspaceService.createWorkspace(workspaceUpsertRest, userBO, subscriberId)).thenReturn(expectedOrg);
-        when(workspaceRepository.findById(1L)).thenReturn(Optional.of(org));
+        when(workspaceService.createWorkspace(workspaceUpsertRest, userBO, organizationId)).thenReturn(expectedOrg);
+        when(workspaceRepository.findById(1L)).thenReturn(Optional.of(work));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
         when(userRepository.findById(1L)).thenReturn(Optional.of(userEntity));
-        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(org.getId(), userBO.getId())).thenReturn(Optional.empty());
-        when(roleService.isUserDomainAuthorized(userBO, subscriberId)).thenReturn(true);
-        when(roleService.hasAdminRightsOnOrganization(userBO, subscriberId)).thenReturn(false);
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(work.getId(), userBO.getId())).thenReturn(Optional.empty());
+        when(roleService.isUserDomainAuthorized(userBO, organizationId)).thenReturn(true);
+        when(roleService.hasAdminRightsOnOrganization(userBO, organizationId)).thenReturn(false);
 
         WorkspaceBO result = administratorWorkspaceService.createWorkspace(workspaceUpsertRest, userBO, false);
 
-        verify(workspaceService).createWorkspace(workspaceUpsertRest, userBO, subscriberId);
-        verify(roleService).hasAdminRightsOnOrganization(userBO, subscriberId);
+        verify(workspaceService).createWorkspace(workspaceUpsertRest, userBO, organizationId);
+        verify(roleService).hasAdminRightsOnOrganization(userBO, organizationId);
         verify(userService).clearUserCache(userBO);
         verify(userRepository).findById(1L);
         verify(userWorkspaceRepository).save(any());
@@ -278,67 +282,67 @@ class AdministratorWorkspaceServiceTest {
     @Test
     void createWorkspace_NoAdminRightsAnd_NoDomainAuthorization_ThrowException() {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        Long subscriberId = 1L;
-        String organizationName = "ORGANIZATION";
+        Long organizationId = 1L;
+        String workspaceName = "WORKSPACE";
         String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
 
         WorkspaceUpsertRest workspaceUpsertRest =
-                TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
+                TestUtils.createOrganizationUpsert(organizationId, workspaceName, updatedStatus, dataRetentionDay);
 
-        when(roleService.hasAdminRightsOnOrganization(userBO, subscriberId)).thenReturn(false);
-        when(roleService.isUserDomainAuthorized(userBO, subscriberId)).thenReturn(false);
+        when(roleService.hasAdminRightsOnOrganization(userBO, organizationId)).thenReturn(false);
+        when(roleService.isUserDomainAuthorized(userBO, organizationId)).thenReturn(false);
 
         doThrow(new AuthorizationException(HttpServletResponse.SC_FORBIDDEN,
-                "User with id 1 has no admin role on subscriber 1 or has domain not authorized."))
+                "User with id 1 has no admin role on organization 1 or has domain not authorized."))
                 .when(administratorRoleService).hasOrganizationAdminOrDomainAccess(userBO,
-                        subscriberId, false, false);
+                        organizationId, false, false);
 
         assertThrows(AuthorizationException.class, () -> {
             administratorWorkspaceService.createWorkspace(workspaceUpsertRest, userBO, true);
         });
 
-        verify(roleService).hasAdminRightsOnOrganization(userBO, subscriberId);
-        verify(roleService).isUserDomainAuthorized(userBO, subscriberId);
+        verify(roleService).hasAdminRightsOnOrganization(userBO, organizationId);
+        verify(roleService).isUserDomainAuthorized(userBO, organizationId);
     }
 
     @Test
     void getUsersOfWorkspaceNotFound() {
-        Long orgId = 12L;
-        when(workspaceRepository.findById(orgId)).thenReturn(Optional.empty());
+        Long workId = 12L;
+        when(workspaceRepository.findById(workId)).thenReturn(Optional.empty());
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         G4itRestException g4itRestException = assertThrows(G4itRestException.class, () ->
-                administratorWorkspaceService.getUsersOfWorkspace(orgId, userBO)
+                administratorWorkspaceService.getUsersOfWorkspace(workId, userBO)
         );
 
-        assertEquals("Organization 12 not found.", g4itRestException.getMessage());
+        assertEquals("Workspace 12 not found.", g4itRestException.getMessage());
     }
 
 
     // Imports omitted for brevity
 
     @Test
-    void getAllUsersOfOrg_AsSubscriberAdmin() {
-        Workspace org = TestUtils.createOrganization();
+    void getAllUsersOfOrg_AsOrganizationAdmin() {
+        Workspace work = TestUtils.createWorkspace();
 
-        when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(org.getOrganization().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnOrganization(any(), eq(org.getOrganization().getId()))).thenReturn(true);
+        when(workspaceRepository.findById(work.getId())).thenReturn(Optional.of(work));
+        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(work.getOrganization().getId()), eq(work.getId()));
+        when(roleService.hasAdminRightsOnOrganization(any(), eq(work.getOrganization().getId()))).thenReturn(true);
 
-        // Subscriber admin
+        // Organization admin
         User adminUser = User.builder().id(1L).email("admin@domain.com").build();
         Role adminRole = Role.builder().name(Constants.ROLE_ORGANIZATION_ADMINISTRATOR).build();
         UserOrganization userOrganization = UserOrganization.builder().user(adminUser).roles(List.of(adminRole)).build();
-        when(userOrganizationRepository.findByOrganization(org.getOrganization())).thenReturn(List.of(userOrganization));
+        when(userOrganizationRepository.findByOrganization(work.getOrganization())).thenReturn(List.of(userOrganization));
 
         // Org user
-        User orgUser = User.builder().id(2L).email("org@domain.com").build();
+        User orgUser = User.builder().id(2L).email("work@domain.com").build();
         Role orgRole = Role.builder().name(Constants.ROLE_WORKSPACE_ADMINISTRATOR).build();
         UserWorkspace userWorkspace = UserWorkspace.builder().user(orgUser).roles(List.of(orgRole)).build();
-        when(userWorkspaceRepository.findByWorkspace(org)).thenReturn(List.of(userWorkspace));
+        when(userWorkspaceRepository.findByWorkspace(work)).thenReturn(List.of(userWorkspace));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
+        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(work.getId(), userBO);
 
         assertEquals(2, result.size());
         assertTrue(result.stream().anyMatch(user -> user.getId() == 1L));
@@ -346,28 +350,28 @@ class AdministratorWorkspaceServiceTest {
     }
 
     @Test
-    void getNonSubscriberAdminUsersOfOrg_AsOrgAdmin() {
-        Workspace org = TestUtils.createOrganization();
+    void getNonOrganizationAdminUsersOfOrg_AsOrgAdmin() {
+        Workspace work = TestUtils.createWorkspace();
 
-        when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(org.getOrganization().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnOrganization(any(), eq(org.getOrganization().getId()))).thenReturn(false);
+        when(workspaceRepository.findById(work.getId())).thenReturn(Optional.of(work));
+        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(work.getOrganization().getId()), eq(work.getId()));
+        when(roleService.hasAdminRightsOnOrganization(any(), eq(work.getOrganization().getId()))).thenReturn(false);
 
         User adminUser = User.builder().id(1L).email("admin@domain.com").build();
         Role adminRole = Role.builder().name(Constants.ROLE_ORGANIZATION_ADMINISTRATOR).build();
         UserOrganization userOrganization = UserOrganization.builder().user(adminUser).roles(List.of(adminRole)).build();
-        when(userOrganizationRepository.findByOrganization(org.getOrganization())).thenReturn(List.of(userOrganization));
+        when(userOrganizationRepository.findByOrganization(work.getOrganization())).thenReturn(List.of(userOrganization));
 
-        User orgUser = User.builder().id(2L).email("org@domain.com").build();
+        User orgUser = User.builder().id(2L).email("work@domain.com").build();
         Role orgRole = Role.builder().name(Constants.ROLE_WORKSPACE_ADMINISTRATOR).build();
         User userEntity = User.builder().id(3L).email("user@domain.com").build();
         Role userRole = Role.builder().name(Constants.ROLE_INVENTORY_READ).build();
 
-        when(userWorkspaceRepository.findByWorkspace(org)).
+        when(userWorkspaceRepository.findByWorkspace(work)).
                 thenReturn(List.of(UserWorkspace.builder().user(orgUser).roles(List.of(orgRole)).build(),
                         UserWorkspace.builder().user(userEntity).roles(List.of(userRole)).build()));
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
+        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(work.getId(), userBO);
 
         assertEquals(2, result.size());
         assertTrue(result.stream().anyMatch(user -> user.getId() == 2L));
@@ -376,37 +380,37 @@ class AdministratorWorkspaceServiceTest {
 
     @Test
     void getUsersOfWorkspace_AsSuperAdmin() {
-        Workspace org = TestUtils.createOrganization();
+        Workspace work = TestUtils.createWorkspace();
 
-        when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(org.getOrganization().getId()), eq(org.getId()));
+        when(workspaceRepository.findById(work.getId())).thenReturn(Optional.of(work));
+        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(work.getOrganization().getId()), eq(work.getId()));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         userBO.setEmail(Constants.SUPER_ADMIN_EMAIL);
-        // One org user
+        // One work user
         User orgUser = User.builder().id(2L).email("user@domain.com").build();
         Role orgRole = Role.builder().name(Constants.ROLE_WORKSPACE_ADMINISTRATOR).build();
         UserWorkspace userWorkspace = UserWorkspace.builder().user(orgUser).roles(List.of(orgRole)).build();
-        when(userWorkspaceRepository.findByWorkspace(org)).thenReturn(List.of(userWorkspace));
-        when(userOrganizationRepository.findByOrganization(org.getOrganization())).thenReturn(Collections.emptyList());
+        when(userWorkspaceRepository.findByWorkspace(work)).thenReturn(List.of(userWorkspace));
+        when(userOrganizationRepository.findByOrganization(work.getOrganization())).thenReturn(Collections.emptyList());
 
-        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
+        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(work.getId(), userBO);
         assertEquals(1, result.size());
         assertTrue(result.stream().anyMatch(user -> user.getId() == 2L));
     }
 
     @Test
     void getUsersOfOrg_OrgUserIsSuperAdmin_SkippedInWorkspaceList() {
-        Workspace org = TestUtils.createOrganization();
+        Workspace work = TestUtils.createWorkspace();
 
-        when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(org.getOrganization().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnOrganization(any(), eq(org.getOrganization().getId()))).thenReturn(false);
+        when(workspaceRepository.findById(work.getId())).thenReturn(Optional.of(work));
+        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(work.getOrganization().getId()), eq(work.getId()));
+        when(roleService.hasAdminRightsOnOrganization(any(), eq(work.getOrganization().getId()))).thenReturn(false);
 
-        // No subscriber admins
-        when(userOrganizationRepository.findByOrganization(org.getOrganization())).thenReturn(Collections.emptyList());
+        // No organization admins
+        when(userOrganizationRepository.findByOrganization(work.getOrganization())).thenReturn(Collections.emptyList());
 
-        // Two org users, one has super admin email, one does not
+        // Two work users, one has super admin email, one does not
         User superAdminUser = User.builder().id(11L).email(Constants.SUPER_ADMIN_EMAIL).build();
         Role orgRole = Role.builder().name(Constants.ROLE_WORKSPACE_ADMINISTRATOR).build();
         UserWorkspace userWorkspaceSuper = UserWorkspace.builder().user(superAdminUser).roles(List.of(orgRole)).build();
@@ -414,10 +418,10 @@ class AdministratorWorkspaceServiceTest {
         User normalUser = User.builder().id(12L).email("user@domain.com").build();
         UserWorkspace userWorkspaceNormal = UserWorkspace.builder().user(normalUser).roles(List.of(orgRole)).build();
 
-        when(userWorkspaceRepository.findByWorkspace(org)).thenReturn(List.of(userWorkspaceSuper, userWorkspaceNormal));
+        when(userWorkspaceRepository.findByWorkspace(work)).thenReturn(List.of(userWorkspaceSuper, userWorkspaceNormal));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
+        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(work.getId(), userBO);
 
         // Should only return the normal user, not the super admin
         assertEquals(1, result.size());
@@ -425,31 +429,31 @@ class AdministratorWorkspaceServiceTest {
     }
 
     @Test
-    void getUsersOfOrg_OrgUserIsAlsoSubscriberAdmin_SubscriberAdminsFilteredFromWorkspaceList() {
-        Workspace org = TestUtils.createOrganization();
+    void getUsersOfOrg_OrgUserIsAlsoOrganizationAdmin_OrganizationAdminsFilteredFromWorkspaceList() {
+        Workspace work = TestUtils.createWorkspace();
 
-        when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(org.getOrganization().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnOrganization(any(), eq(org.getOrganization().getId()))).thenReturn(false);
+        when(workspaceRepository.findById(work.getId())).thenReturn(Optional.of(work));
+        doNothing().when(administratorRoleService).hasAdminRightOnOrganizationOrWorkspace(any(), eq(work.getOrganization().getId()), eq(work.getId()));
+        when(roleService.hasAdminRightsOnOrganization(any(), eq(work.getOrganization().getId()))).thenReturn(false);
 
         User sharedUser = User.builder().id(1L).email("admin@domain.com").build();
         Role adminRole = Role.builder().name(Constants.ROLE_ORGANIZATION_ADMINISTRATOR).build();
         UserOrganization userOrganization = UserOrganization.builder().user(sharedUser).roles(List.of(adminRole)).build();
-        when(userOrganizationRepository.findByOrganization(org.getOrganization())).thenReturn(List.of(userOrganization));
+        when(userOrganizationRepository.findByOrganization(work.getOrganization())).thenReturn(List.of(userOrganization));
 
         Role orgRole = Role.builder().name(Constants.ROLE_WORKSPACE_ADMINISTRATOR).build();
         UserWorkspace userWorkspace = UserWorkspace.builder().user(sharedUser).roles(List.of(orgRole)).build();
 
-        // Plus one more org user
+        // Plus one more work user
         User orgUser2 = User.builder().id(2L).email("user@domain.com").build();
         UserWorkspace userWorkspace2 = UserWorkspace.builder().user(orgUser2).roles(List.of(orgRole)).build();
 
-        when(userWorkspaceRepository.findByWorkspace(org)).thenReturn(List.of(userWorkspace, userWorkspace2));
+        when(userWorkspaceRepository.findByWorkspace(work)).thenReturn(List.of(userWorkspace, userWorkspace2));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
-        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
+        List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(work.getId(), userBO);
 
-        // Only the non-subscriber-admins should be returned
+        // Only the non-organization-admins should be returned
         assertEquals(1, result.size());
         assertTrue(result.stream().anyMatch(user -> user.getId() == 2L));
     }
@@ -459,14 +463,14 @@ class AdministratorWorkspaceServiceTest {
 
         long userId = 1L;
 
-        Workspace workspace = TestUtils.createOrganization();
+        Workspace workspace = TestUtils.createWorkspace();
         UserRoleRest userRoleRest = TestUtils.createUserRoleRest(userId, List.of(ROLE));
-        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(organizationId,
+        LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(workspaceId,
                 Collections.singletonList(userRoleRest));
-        UserWorkspace userWorkspace = TestUtils.createUserOrganization(organizationId, userId);
+        UserWorkspace userWorkspace = TestUtils.createUserWorkspace(workspaceId, userId);
 
-        when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(workspace));
-        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userId))
+        when(workspaceRepository.findById(workspaceId)).thenReturn(Optional.of(workspace));
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(workspaceId, userId))
                 .thenReturn(java.util.Optional.of(userWorkspace));
 
         assertDoesNotThrow(() -> administratorWorkspaceService.deleteUserWorkLink(linkUserRoleRest, TestUtils.createUserBOAdminSub()));
